added support module

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,8 @@
 	<script src="sites/app.js"></script>
 	<script src="sites/main/main.js"></script>
 	<script src="sites/emergency/emergency.js"></script>
-  <script src="sites/directory/directory.js"></script>
+    <script src="sites/directory/directory.js"></script>
+    <script src="sites/support/support.js"></script>
   </body>
 
 </html>
