added social module

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
 	<script src="sites/emergency/emergency.js"></script>
     <script src="sites/directory/directory.js"></script>
     <script src="sites/support/support.js"></script>
+    <script src="sites/social/social.js"></script>
   </body>
 
 </html>
