added about and visit modules

--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,8 @@
     <script src="sites/directory/directory.js"></script>
     <script src="sites/support/support.js"></script>
     <script src="sites/social/social.js"></script>
+    <script src="sites/about/about.js"></script>
+    <script src="sites/visit/visit.js"></script>
   </body>
 
 </html>
