--- a/app/sites/visit/visit_menu.html
+++ b/app/sites/visit/visit_menu.html
@@ -2,17 +2,19 @@
     <header>
         <button ui-sref="main" class="left-nav icon-cancel-circled"></button>
         <div class="wrapper">
-            <h1><span>Campus</span> Social</h1>
+            <h1><span>Campus</span> Visit</h1>
         </div>
     </header>
     <section class="body">
         <div class="wrapper">
             <ul>
-                <a ng-repeat="item in socialMenu" href="{{item.url}}">
+                <a ng-repeat="item in visitMenu" ui-sref-active="active" href="{{item.url}}">
                     <li>
 					<span>
 						<i aria-hidden="true" class="{{item.icon}}"></i>
-						<h2>{{item.title}}</h2>
+						<h2>{{item.title | removePluses}}</h2>
+
+
 					</span>
 
                     </li>
