fixed ssl issue on external links

--- a/app/sites/support/support_submenu.html
+++ b/app/sites/support/support_submenu.html
@@ -8,7 +8,7 @@
     <section class="body">
         <div class="wrapper">
             <ul>
-                <a ng-repeat="contact in supportSubmenu" ui-sref-active="active" href="{{contact.url}}">
+                <a ng-repeat="contact in supportSubmenu" ui-sref-active="active" href="{{contact.url}}" target="_blank">
                     <li>
                         {{contact.title}}
                     </li>
