--- a/app/sites/visit/visit_menu.html
+++ b/app/sites/visit/visit_menu.html
@@ -8,7 +8,7 @@
     <section class="body">
         <div class="wrapper">
             <ul>
-                <a ng-repeat="item in visitMenu" ui-sref-active="active" href="{{item.url}}">
+                <a ng-repeat="item in visitMenu" ui-sref-active="active" href="{{item.url}}" target="_blank">
                     <li>
 					<span>
 						<i aria-hidden="true" class="{{item.icon}}"></i>
