--- a/app/index.html
+++ b/app/index.html
@@ -13,12 +13,12 @@
 	
 	<!-- Angular -->
   	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0-beta.3/angular.min.js"></script> -->
-    <script type="text/javascript" src="https://code.angularjs.org/1.3.0-beta.14/angular.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.3/angular.min.js"></script>
     <!--<script type="text/javascript" src="https://code.angularjs.org/1.3.0-beta.14/angular-animate.min.js"></script> -->
-    <script type="text/javascript" src="https://code.angularjs.org/1.3.0-beta.14/angular-resource.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.3.0-rc.3/angular-resource.min.js"></script>
   	<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.min.js"></script> -->
     <script type="text/javascript" src="inc/js/angular-ui-router/release/angular-ui-router.2.11.min.js"></script>
-    <script type="text/javascript" src="https://code.angularjs.org/1.3.0-beta.14/angular-touch.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.3.0-rc.3/angular-touch.min.js"></script>
     <script type="text/javascript" src="inc/js/ng-iscroll/iscroll.js"></script>
     <script type="text/javascript" src="inc/js/ng-iscroll/ng-iscroll.js"></script>
     <!--<script type="text/javascript" src="inc/js/angular-gestures/dist/gestures.min.js"></script>-->
