--- a/app/sites/directory/directory_search.html
+++ b/app/sites/directory/directory_search.html
@@ -13,7 +13,7 @@
 		<ul>
 				<li class="tip" ng-show="resultscount">{{resultscount}} results</li>
 				<a ng-repeat="result in results" ui-sref-active="active" ui-sref=".person({uid:'{{result.uid}}'})">
-				<li>
+				<li tabindex="{{$index+1}}">
 					{{result.givenname}} <b>{{result.sn}}</b>
 				</li>
 			</a>
