added new module

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
     <script src="sites/social/social.js"></script>
     <script src="sites/about/about.js"></script>
     <script src="sites/visit/visit.js"></script>
+    <script src="sites/newscenter/newscenter.js"></script>
   </body>
 
 </html>
