--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
-    <!-- <base href="/" /> -->
+    <base href="/">
     <title>UCSC Mobile</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
